Add dooit keybind to hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -135,6 +135,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
+bind = $mainMod, O, exec, kitty -e dooit
 
 bind = $mainMod_SHIFT, C, killactive, 
 bind = $mainMod_SHIFT, T, togglefloating, 
