--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,6 @@ monitor=,1980x1070@144,auto,1
 exec-once = waybar & hyprpaper
 exec-once = dunst
 exec-once = ~/shell-scripts/xdph.sh
-exec-once = emacs --daemon
 exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -135,7 +134,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
-bind = $mainMod, O, exec, kitty -e dooit
+bind = $mainMod, T, exec, kitty -e dooit
 
 bind = $mainMod_SHIFT, C, killactive, 
 bind = $mainMod_SHIFT, T, togglefloating, 
