Add environment variable and finally fix alacritty and logisim-evolution to work with hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,15 @@
 monitor=,1980x1070@144,auto,1
 
+env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bin:$HOME/.cargo/bin:$PATH
+env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
+env = JAVA_HOME, /usr/lib/jvm/java-20-openjdk:$JAVA_HOME
+
+$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/watcher.jpg"
+$w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/heavy.jpg"
+$w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/firewatch.png"
+$w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/cave.jpg"
+$w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/city.jpg"
+
 exec-once = waybar & hyprpaper
 exec-once = dunst
 exec-once = ~/shell-scripts/xdph.sh
@@ -11,15 +21,9 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = [workspace special:term] /home/parzival/.cargo/bin/alacritty
 exec-once = [workspace special:browse] vivaldi-stable --incognito
 exec-once = [workspace special:mail] thunderbird
-exec-once = [workspace special:doom] emacsclient -c -a 'emacs'
 exec-once = [workspace special:whats] whatsapp-for-linux
 exec-once = [workspace special:calc] speedcrunch
-
-$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/watcher.jpg"
-$w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/heavy.jpg"
-$w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/firewatch.png"
-$w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/cave.jpg"
-$w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/city.jpg"
+exec-once = [workspace special:doom] emacsclient -c -a 'emacs'
 
 input {
     kb_layout = us,us
@@ -124,7 +128,7 @@ windowrulev2 = workspace 2,  title:^(.*Vivaldi.*)$
 
 $mainMod = ALT
 
-bind = $mainMod, RETURN, exec, /home/parzival/.cargo/bin/alacritty
+bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod_SHIFT, RETURN, exec, kitty
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, F, exec, vivaldi-stable --profile-directory="Default"
@@ -134,7 +138,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
-bind = $mainMod, T, exec, kitty -e dooit
+bind = $mainMod, T, exec, alacritty -e dooit
 
 bind = $mainMod_SHIFT, C, killactive, 
 bind = $mainMod_SHIFT, T, togglefloating, 
