Add windowrule to auto-tile logisim-evolution

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -127,6 +127,7 @@ windowrulev2 = float, title:^(.*Agent)$
 windowrulev2 = float, title:^(.*Properties)$
 windowrulev2 = tile,  title:^(.*Vivaldi.*)$
 windowrulev2 = workspace 2,  title:^(.*Vivaldi.*)$
+windowrulev2 = tile,  title:^(.*Logisim-evolution.*)$
 
 $mainMod = ALT
 
