Correct Alacritty path

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = [workspace special:browse] vivaldi-stable --incognito
 exec-once = [workspace special:spot] firefox www.spotify.com
-exec-once = [workspace special:term] /home/parzival/.cargo/bin/alacritty
+exec-once = [workspace special:term] alacritty
 exec-once = [workspace special:mail] thunderbird
 exec-once = [workspace special:whats] whatsapp-for-linux
 exec-once = [workspace special:calc] speedcrunch
