--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -8,7 +8,6 @@
     "height": 0,
     "modules-left": [
         "clock",
-        // "cpu",
         "custom/weather",
         "wlr/workspaces"
     ],
@@ -40,37 +39,35 @@
         "on-click": "activate",
         "format": "{icon}",
         "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "urgent": "",
-            "active": "",
+            "1": " main ",
+            "2": " 󱝆 Surf ",
+            "3": " ( prog) ",
+            "4": " 󰿈 Math ",
+            "5": " 󰼭 Write ",
             "default": ""
           }
     },
-    // "cpu": {
-    //     "interval": 10,
-    //     "format": " {}%",
-    //     "max-length": 10,
-    //     "on-click": ""
-    // },
+    "cpu": {
+        "interval": 10,
+        "format": "󰻠 {}%",
+        "max-length": 10,
+        "on-click": ""
+    },
      "memory": {
          "interval": 30,
-         "format": " {}%",
+         "format": "󰍛 {}%",
          "format-alt":" {used:0.1f}G",
          "max-length": 10
      },
     "custom/updates": {
         "exec": "(paru -Qua) | wc -l",
         "interval": 7200,
-        "format": " {}"
+        "format": "󰇚 {}"
     },
      "custom/language": {
          "exec": "cat /tmp/kb_layout",
          "interval": 3,
-         "format": " {}",
+         "format": " {}",
          "tooltip": false
     },
     "tray": {
@@ -79,54 +76,53 @@
         "spacing": 10
     },
     "clock": {
-        "format": "{: %R   %d/%m}",
+        "format": "{:󰥔 %R   %d/%m}",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
     "pulseaudio": {
         "format": "{icon} {volume}%",
         "tooltip": false,
-        "format-muted": " Muted",
+        "format-muted": "󰖁 Muted",
         "on-click": "pamixer -t",
         "on-scroll-up": "pamixer -i 5",
         "on-scroll-down": "pamixer -d 5",
         "scroll-step": 5,
         "format-icons": {
-            "headphone": "",
+            "headphone": "󰋋",
             "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
+            "headset": "󰋎",
+            "phone": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": ["󰕿", "󰖀", "󰕾"]
         },
 	"on-click": "pavucontrol"
     },
     "pulseaudio#microphone": {
         "format": "{format_source}",
         "tooltip": false,
-        "format-source": " {volume}%",
-        "format-source-muted": " Muted",
+        "format-source": " {volume}%",
+        "format-source-muted": " Muted",
         "on-click": "pamixer --default-source -t",
         "on-scroll-up": "pamixer --default-source -i 5",
         "on-scroll-down": "pamixer --default-source -d 5",
         "scroll-step": 5
     },
     "network": {
-        "format-wifi": "直 {essid}",
-        "format-ethernet": " {essid}",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "睊 Disconnected",
+        "format-wifi": " {essid}",
+        "format-ethernet": "󰈀 {essid}",
+        "format-linked": "{ifname} (No IP) 󱚼",
+        "format-disconnected": "󰖪 Disconnected",
         "tooltip-format-wifi": "Signal Strenght: {signalStrength}% | Down Speed: {bandwidthDownBits}, Up Speed: {bandwidthUpBits}",
         "on-click": "wifi4wofi"
     },
     "battery": {
         "states": {
-            // "good": 95,
+            "good": 95,
             "warning": 30,
             "critical": 15
         },
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
+        "format-charging": "{capacity}% 󰂄",
         "format-plugged": "{capacity}% ",
         "format-alt": "{time} {icon}",
         // "format-good": "", // An empty format will hide the module
