Minor changes and add brightness and audio keyboard support

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bi
 env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
 env = JAVA_HOME, /usr/lib/jvm/java-20-openjdk:$JAVA_HOME
 
-$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/watcher.jpg"
+$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling.jpg"
 $w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/heavy.jpg"
 $w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/firewatch.png"
 $w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/cave.jpg"
@@ -50,7 +50,7 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-    layout = master
+    layout = dwindle
 }
 
 decoration {
@@ -118,7 +118,7 @@ device:epic mouse V1 {
 
 misc {
     enable_swallow = true
-    swallow_regex = '^(Alacritty)$'
+    swallow_regex = '^(.*parzival@Firestrom.*)$'
 }
 
 windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
@@ -141,7 +141,13 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
-bind = $mainMod, T, exec, alacritty -e dooit
+
+bind = , XF86MonBrightnessUp, exec,light -A 5
+bind = , XF86MonBrightnessDown, exec, light -U 5
+bind = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +5
+bind = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
+bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
+bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 
 bind = $mainMod_SHIFT, C, killactive, 
 bind = $mainMod_SHIFT, T, togglefloating, 
@@ -185,7 +191,7 @@ bind = $mainMod, J, cyclenext, prev
 # Switch workspace keys
 bind = $mainMod, parenleft, workspace, 1
 bind = $mainMod, parenleft, exec, $w1
-bind = $mainMod, parenleft, exec, wal -i ~/Pictures/watcher.jpg
+bind = $mainMod, parenleft, exec, wal -i ~/Pictures/falling.jpg
 
 bind = $mainMod, parenright, workspace, 2
 bind = $mainMod, parenright, exec, $w2 
