Change blur to be more kwase

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,8 +33,9 @@ input {
     kb_model =
     kb_options = ctrl:nocaps, grp:rctrl_rshift_toggle, 
     kb_rules = 
-
+    numlock_by_default = true
     follow_mouse = 1
+    accel_profile = "adaptive"
 
     touchpad {
         natural_scroll = no
@@ -61,8 +62,9 @@ decoration {
     inactive_opacity = 1.0
 
     blur = true
-    blur_size = 3
-    blur_passes = 1
+    blur_size = 8
+    blur_passes = 2
+    blur_ignore_opacity = true
     blur_new_optimizations = true
 
     drop_shadow = true
@@ -110,6 +112,7 @@ master {
 
 gestures {
     workspace_swipe = on
+    workspace_swipe_forever = true
 }
 
 device:epic mouse V1 {
@@ -118,7 +121,7 @@ device:epic mouse V1 {
 
 misc {
     enable_swallow = true
-    swallow_regex = '^(.*parzival@Firestrom.*)$'
+    swallow_exception_regex = '^(.*parzival@Firestrom.*)$'
 }
 
 windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
