--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,4 @@
-preload = ~/Pictures/watcher.jpg
+preload = ~/Pictures/falling.jpg
 preload = ~/Pictures/cave.jpg
 preload = ~/Pictures/firewatch.png
 preload = ~/Pictures/heavy.jpg
@@ -8,7 +8,7 @@ preload = ~/Pictures/city.jpg
 # .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1,~/Pictures/watcher.jpg
+wallpaper = eDP-1,~/Pictures/falling.jpg
 # if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
