Bind AudioPlay button to record.sh

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,6 +151,7 @@ bind = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +5
 bind = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
 bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
+bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
 
 bind = $mainMod_SHIFT, C, killactive, 
 bind = $mainMod_SHIFT, T, togglefloating, 
