Make post-modernist startpage

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,14 +1,14 @@
+preload = ~/Pictures/reflection.jpg
+preload = ~/Pictures/falling-star.jpg
 preload = ~/Pictures/falling.jpg
-preload = ~/Pictures/cave.jpg
-preload = ~/Pictures/firewatch.png
-preload = ~/Pictures/heavy.jpg
-preload = ~/Pictures/city.jpg
+preload = ~/Pictures/apollo.jpg
+preload = ~/Pictures/woman.jpg
 #if more than one preload is desired then continue to preload other backgrounds
 #preload = /path/to/next_image.png
 # .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1,~/Pictures/falling.jpg
+wallpaper = eDP-1,~/Pictures/reflection.jpg
 # if more than one monitor in use, can load a 2nd image
 # wallpaper = monitor2,/path/to/next_image.png
 # .. more monitors
