--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,11 +4,11 @@ env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bi
 env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
 env = JAVA_HOME, /usr/lib/jvm/java-20-openjdk:$JAVA_HOME
 
-$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling.jpg"
-$w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/heavy.jpg"
-$w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/firewatch.png"
-$w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/cave.jpg"
-$w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/city.jpg"
+$w1 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling-star.jpg"
+$w2 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/reflection.jpg"
+$w3 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/falling.jpg"
+$w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/apollo.jpg"
+$w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/woman.jpg"
 
 
 exec-once = waybar & hyprpaper
@@ -45,9 +45,8 @@ input {
 }
 
 general {
-
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 3
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -55,7 +54,7 @@ general {
 }
 
 decoration {
-    rounding = 10
+    rounding = 8
     multisample_edges = true
 
     active_opacity = 1.0
@@ -195,23 +194,23 @@ bind = $mainMod, J, cyclenext, prev
 # Switch workspace keys
 bind = $mainMod, parenleft, workspace, 1
 bind = $mainMod, parenleft, exec, $w1
-bind = $mainMod, parenleft, exec, wal -i ~/Pictures/falling.jpg
+bind = $mainMod, parenleft, exec, wal -i ~/Pictures/falling-star.jpg
 
 bind = $mainMod, parenright, workspace, 2
 bind = $mainMod, parenright, exec, $w2 
-bind = $mainMod, parenright, exec, wal -i ~/Pictures/heavy.jpg
+bind = $mainMod, parenright, exec, wal -i ~/Pictures/reflection.jpg
 
 bind = $mainMod, braceright, workspace, 3
 bind = $mainMod, braceright, exec, $w3
-bind = $mainMod, braceright, exec, wal -i ~/Pictures/firewatch.png
+bind = $mainMod, braceright, exec, wal -i ~/Pictures/falling.jpg
 
 bind = $mainMod, plus, workspace, 4
 bind = $mainMod, plus, exec, $w4
-bind = $mainMod, plus, exec, wal -i ~/Pictures/cave.jpg
+bind = $mainMod, plus, exec, wal -i ~/Pictures/apollo.jpg
 
 bind = $mainMod, braceleft, workspace, 5
 bind = $mainMod, braceleft, exec, $w5
-bind = $mainMod, braceleft, exec, wal -i ~/Pictures/city.jpg
+bind = $mainMod, braceleft, exec, wal -i ~/Pictures/woman.jpg
 
 bind = $mainMod, bracketright, workspace, 6
 bind = $mainMod, bracketleft, workspace, 7
