Add pass, steam and fidelity support

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -120,7 +120,7 @@ device:epic mouse V1 {
 
 misc {
     enable_swallow = true
-    swallow_exception_regex = '^(.*parzival@Firestrom.*)$'
+    swallow_exception_regex = '^(mpv)$'
 }
 
 windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
@@ -143,6 +143,7 @@ bind = $mainMod, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-co
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, S, exec, sioyek
 bind = $mainMod SHIFT, E, exec, emacsclient -c -a 'emacs' -e "(eshell)"
+bind = $mainMod, P, exec, $HOME/shell-scripts/pass.sh
 
 bind = , XF86MonBrightnessUp, exec,light -A 5
 bind = , XF86MonBrightnessDown, exec, light -U 5
@@ -152,7 +153,8 @@ bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
 
-bind = $mainMod_SHIFT, C, killactive, 
+bind = $mainMod_SHIFT, C, killactive,
+bind = $mainMod_SHIFT, C, exec, $HOME/shell-scripts/close.sh
 bind = $mainMod_SHIFT, T, togglefloating, 
 
 bind = $mainMod, Q, exec, wlogout 
@@ -182,7 +184,7 @@ bind = $mainMod_SHIFT, L, layoutmsg, swapwithmaster
 bind = $mainMod, SPACE, layoutmsg, orientationnext
 bind = $mainMod_SHIFT, SPACE, layoutmsg, orientationprev
 
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
 # Move focus with mainMod + vim-arrow keys
@@ -197,7 +199,7 @@ bind = $mainMod, parenleft, exec, $w1
 bind = $mainMod, parenleft, exec, wal -i ~/Pictures/falling-star.jpg
 
 bind = $mainMod, parenright, workspace, 2
-bind = $mainMod, parenright, exec, $w2 
+bind = $mainMod, parenright, exec, $w2
 bind = $mainMod, parenright, exec, wal -i ~/Pictures/reflection.jpg
 
 bind = $mainMod, braceright, workspace, 3
@@ -224,7 +226,41 @@ bind = $mainMod SHIFT, plus, movetoworkspace, 4
 bind = $mainMod SHIFT, braceleft, movetoworkspace, 5
 bind = $mainMod SHIFT, bracketright, movetoworkspace, 6
 bind = $mainMod SHIFT, bracketleft, movetoworkspace, 7
-bind = $mainMod SHIFT, exclam, movetoworkspace, 8
+
+
+# bind = $mainMod, 1, workspace, 1
+# bind = $mainMod, 1, exec, $w1
+# bind = $mainMod, 1, exec, wal -i ~/Pictures/falling-star.jpg
+
+# bind = $mainMod, 2, workspace, 2
+# bind = $mainMod, 2, exec, $w2
+# bind = $mainMod, 2, exec, wal -i ~/Pictures/reflection.jpg
+
+# bind = $mainMod, 3, workspace, 3
+# bind = $mainMod, 3, exec, $w3
+# bind = $mainMod, 3, exec, wal -i ~/Pictures/falling.jpg
+
+# bind = $mainMod, 4, workspace, 4
+# bind = $mainMod, 4, exec, $w4
+# bind = $mainMod, 4, exec, wal -i ~/Pictures/apollo.jpg
+
+# bind = $mainMod, 5, workspace, 5
+# bind = $mainMod, 5, exec, $w5
+# bind = $mainMod, 5, exec, wal -i ~/Pictures/woman.jpg
+
+# bind = $mainMod, 6, workspace, 6
+# bind = $mainMod, 7, workspace, 7
+# bind = $mainMod, 8, workspace, 8
+
+# # Move active window to a workspace with mainMod + SHIFT + [key]
+# bind = $mainMod SHIFT, 1, movetoworkspace, 1
+# bind = $mainMod SHIFT, 2, movetoworkspace, 2
+# bind = $mainMod SHIFT, 3, movetoworkspace, 3
+# bind = $mainMod SHIFT, 4, movetoworkspace, 4
+# bind = $mainMod SHIFT, 5, movetoworkspace, 5
+# bind = $mainMod SHIFT, 6, movetoworkspace, 6
+# bind = $mainMod SHIFT, 7, movetoworkspace, 7
+# bind = $mainMod SHIFT, 8, movetoworkspace, 8
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
