--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -60,7 +60,7 @@
         "format-linked": "{ifname} (No IP) 󱚼",
         "format-disconnected": "󰖪 Disconnected",
         "tooltip-format-wifi": "Signal Strenght: {signalStrength}% | Down Speed: {bandwidthDownBits}, Up Speed: {bandwidthUpBits}",
-        "on-click": "wifi4wofi"
+        "on-click": ". $HOME/.dev/wifi4wofi/wifi4wofi"
     },
 	"backlight": {
 		"tooltip": false,
