Fix microphone grep regex

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -49,9 +49,9 @@
         "tooltip": false,
         "format-source": " {volume}%",
         "format-source-muted": " Muted",
-        "on-click": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-..\" | xargs -I dot pulsemixer --id dot --toggle-mute",
-        "on-scroll-up": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-..\" | xargs -I dot pulsemixer --id dot --change-volume +5",
-        "on-scroll-down": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-..\" | xargs -I dot pulsemixer --id dot --change-volume -5",
+        "on-click": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-[0-9]*\" | xargs -I dot pulsemixer --id dot --toggle-mute",
+        "on-scroll-up": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-[0-9]*\" | xargs -I dot pulsemixer --id dot --change-volume +5",
+        "on-scroll-down": "pulsemixer --list-sources | grep \"Microphone\" | tail -n 1 | grep -o \"source-[0-9]*\" | xargs -I dot pulsemixer --id dot --change-volume -5",
         "scroll-step": 5
     },
     "network": {
