--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-monitor=,1980x1070@144,auto,1
+monitor=,1920x1080@60,auto,1
 
 env = PATH, $HOME/.local/bin:/usr/lib/jvm/java-20-openjdk/bin:$HOME/.dev/node/bin:$HOME/.cargo/bin:$PATH
 env = LD_LIBRARY_PATH, /usr/lib/jvm/java-20-openjdk/lib:$LD_LIBRARY_PATH
@@ -31,7 +31,7 @@ input {
     kb_layout = us,us
     kb_variant = dvp,
     kb_model =
-    kb_options = ctrl:nocaps, grp:rctrl_rshift_toggle, 
+    kb_options = ctrl:swapcaps, grp:rctrl_rshift_toggle, 
     kb_rules = 
     numlock_by_default = true
     follow_mouse = 1
@@ -127,8 +127,6 @@ windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
 windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
 windowrulev2 = float, title:^(.*Agent)$
 windowrulev2 = float, title:^(.*Properties)$
-windowrulev2 = tile,  title:^(.*Vivaldi.*)$
-windowrulev2 = workspace 2,  title:^(.*Vivaldi.*)$
 windowrulev2 = tile,  title:^(.*Logisim-evolution.*)$
 
 $mainMod = ALT
