--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ input {
     kb_layout = us,us
     kb_variant = dvp,
     kb_model =
-    kb_options = ctrl:swapcaps, grp:rctrl_rshift_toggle, 
+    kb_options = ctrl:nocaps, grp:rctrl_rshift_toggle, 
     kb_rules = 
     numlock_by_default = true
     follow_mouse = 1
