Add Alt-Tab for non vim users

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -168,12 +168,14 @@ bind = $mainMod_CTRL, C, togglespecialworkspace, calc
 bind = $mainMod_CTRL, S, togglespecialworkspace, spot
 
 bind = $mainMod, M, fullscreen
+bind = $mainMod_SHIFT, M, fullscreen, 1
+bind = $mainMod_CTRL, M, fakefullscreen
 
 bind = $mainMod_CTRL, H, resizeactive, -20 0
 bind = $mainMod_CTRL, L, resizeactive, 20 0
 bind = $mainMod_CTRL, J, resizeactive, 0 -20
 bind = $mainMod_CTRL, K, resizeactive, 0 20
-
+bind = $mainMod, Tab, cyclenext
 # master
 bind = $mainMod_SHIFT, K, layoutmsg, swapnext
 bind = $mainMod_SHIFT, J, layoutmsg, swapprev
@@ -217,13 +219,13 @@ bind = $mainMod, bracketleft, workspace, 7
 bind = $mainMod, exclam, workspace, 8
 
 # Move active window to a workspace with mainMod + SHIFT + [key]
-bind = $mainMod SHIFT, parenleft, movetoworkspace, 1
-bind = $mainMod SHIFT, parenright, movetoworkspace, 2
-bind = $mainMod SHIFT, braceright, movetoworkspace, 3
-bind = $mainMod SHIFT, plus, movetoworkspace, 4
-bind = $mainMod SHIFT, braceleft, movetoworkspace, 5
-bind = $mainMod SHIFT, bracketright, movetoworkspace, 6
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, 7
+bind = $mainMod SHIFT, parenleft, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, parenright, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, braceright, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, plus, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, braceleft, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, 7
 
 
 # bind = $mainMod, 1, workspace, 1
