Switch keybinding for fullscreen and softfullscreen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -167,8 +167,8 @@ bind = $mainMod_CTRL, W, togglespecialworkspace, whats
 bind = $mainMod_CTRL, C, togglespecialworkspace, calc
 bind = $mainMod_CTRL, S, togglespecialworkspace, spot
 
-bind = $mainMod, M, fullscreen
-bind = $mainMod_SHIFT, M, fullscreen, 1
+bind = $mainMod, M, fullscreen, 1
+bind = $mainMod_SHIFT, M, fullscreen
 bind = $mainMod_CTRL, M, fakefullscreen
 
 bind = $mainMod_CTRL, H, resizeactive, -20 0
