--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,35 +1,44 @@
-daemonize
-show-failed-attempts
-clock
-effect-blur=5x5
-color=1f1d2e80
-font="Inter"
-indicator
-indicator-radius=200
-indicator-thickness=20
-line-color=1f1d2e
-ring-color=191724
-inside-color=1f1d2e
-key-hl-color=eb6f92
-separator-color=00000000
-text-color=e0def4
-text-caps-lock-color=""
-line-ver-color=eb6f92
-ring-ver-color=eb6f92
-inside-ver-color=1f1d2e
-text-ver-color=e0def4
-ring-wrong-color=31748f
-text-wrong-color=31748f
-inside-wrong-color=1f1d2e
-inside-clear-color=1f1d2e
-text-clear-color=e0def4
-ring-clear-color=9ccfd8
-line-clear-color=1f1d2e
-line-wrong-color=1f1d2e
-bs-hl-color=31748f
-grace=2
-grace-no-mouse
-grace-no-touch
-datestr="%d.%m"
-fade-in="4"
+# Options
 ignore-empty-password
+disable-caps-lock-text
+
+# Appearance
+clock
+indicator
+image=$HOME/Pictures/lockscreen.jpg
+
+scaling=fill
+
+timestr=%I:%M %p
+datestr=%A, %d %B
+
+# Text
+font=Harriet Display
+font-size=150
+text-color=402826
+text-ver-color=00000000
+text-wrong-color=00000000
+text-clear-color=00000000
+
+# Indicator
+inside-color=00000000
+inside-ver-color=00000000
+inside-wrong-color=00000000
+inside-clear-color=00000000
+inside-caps-lock-color=00000000
+ring-color=00000000
+ring-ver-color=00000000
+ring-wrong-color=00000000
+ring-clear-color=00000000
+line-color=00000000
+line-clear-color=00000000
+line-ver-color=00000000
+line-wrong-color=00000000
+key-hl-color=00000000
+bs-hl-color=00000000
+caps-lock-bs-hl-color=00000000
+caps-lock-key-hl-color=00000000
+separator-color=00000000
+indicator-x-position=400
+indicator-y-position=175
+indicator-radius=350
