Add new eww-bar config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $w4 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/apollo.jpg"
 $w5 = hyprctl hyprpaper wallpaper "eDP-1,~/Pictures/woman.jpg"
 
 
-exec-once = waybar & hyprpaper
+exec-once = eww -d -c $HOME/.config/eww/bar/ & eww open -c $HOME/.config/eww/bar bar & hyprpaper
 exec-once = dunst
 exec-once = ~/shell-scripts/xdph.sh
 exec-once = udiskie &
