--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,13 +151,13 @@ bind = , XF86AudioMute, exec, pulsemixer --toggle-mute
 bind = , Print, exec, $HOME/shell-scripts/screenshot.sh
 bind = , XF86AudioPlay, exec, $HOME/shell-scripts/recorder.sh
 
-bind = $mainMod_SHIFT, C, killactive,
-bind = $mainMod_SHIFT, C, exec, $HOME/shell-scripts/close.sh
-bind = $mainMod_SHIFT, T, togglefloating, 
+bind = $mainMod_SHIFT, C, exec, . $HOME/shell-scripts/close.sh
+bind = $mainMod_SHIFT, T, togglefloating,
 
-bind = $mainMod, Q, exec, wlogout 
-bind = $mainMod_SHIFT, Q, exit, 
+bind = $mainMod, Q, exec, wlogout
+bind = $mainMod_SHIFT, Q, exit,
 bind = $mainMod CTRL , Q, exec, swaylock -K
+bindl =,switch:on:Lid Switch, exec, swaylock -K
 
 bind = $mainMod_CTRL, Return, togglespecialworkspace, term
 bind = $mainMod_CTRL, F, togglespecialworkspace, browse
