Add adblock-native spotify

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = [workspace special:browse] vivaldi-stable --incognito
-exec-once = [workspace special:spot] firefox www.spotify.com
+exec-once = [workspace special:spot] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
 exec-once = [workspace special:term] alacritty
 exec-once = [workspace special:mail] thunderbird
 exec-once = [workspace special:whats] whatsapp-for-linux
@@ -176,6 +176,7 @@ bind = $mainMod_CTRL, L, resizeactive, 20 0
 bind = $mainMod_CTRL, J, resizeactive, 0 -20
 bind = $mainMod_CTRL, K, resizeactive, 0 20
 bind = $mainMod, Tab, cyclenext
+
 # master
 bind = $mainMod_SHIFT, K, layoutmsg, swapnext
 bind = $mainMod_SHIFT, J, layoutmsg, swapprev
