Add a pomodoro workspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,13 +18,14 @@ exec-once = udiskie &
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = [workspace special:browse] vivaldi-stable --incognito
+exec-once = [workspace special:browse] firefox --private-window
 exec-once = [workspace special:spot] LD_PRELOAD=/usr/lib/spotify-adblock.so spotify
 exec-once = [workspace special:term] alacritty
 exec-once = [workspace special:mail] thunderbird
 exec-once = [workspace special:whats] whatsapp-for-linux
 exec-once = [workspace special:calc] speedcrunch
 exec-once = [workspace special:doom] emacs
+exec-once = [workspace special:pomodoro] pomotroid --disable-gpu-sandbox
 
 
 input {
@@ -166,6 +167,7 @@ bind = $mainMod_CTRL, T, togglespecialworkspace, mail
 bind = $mainMod_CTRL, W, togglespecialworkspace, whats
 bind = $mainMod_CTRL, C, togglespecialworkspace, calc
 bind = $mainMod_CTRL, S, togglespecialworkspace, spot
+bind = $mainMod_CTRL, P, togglespecialworkspace, pomodoro
 
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod_SHIFT, M, fullscreen
