Add anki-workspace to hyprland which when paired with emacs generates flashcards synced with phone

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,102 +26,103 @@ exec-once = [workspace special:whats] whatsapp-for-linux
 exec-once = [workspace special:calc] speedcrunch
 exec-once = [workspace special:doom] emacs
 exec-once = [workspace special:pomodoro] pomotroid --disable-gpu-sandbox
+exec-once = [workspace special:anki] anki
 
 
 input {
-    kb_layout = us,us
-    kb_variant = dvp,
-    kb_model =
-    kb_options = ctrl:nocaps, grp:rctrl_rshift_toggle, 
-    kb_rules = 
-    numlock_by_default = true
-    follow_mouse = 1
-    accel_profile = "adaptive"
+	kb_layout = us,us
+	kb_variant = dvp,
+        kb_model =
+        kb_options = ctrl:nocaps, grp:rctrl_rshift_toggle, 
+        kb_rules = 
+        numlock_by_default = true
+        follow_mouse = 1
+        accel_profile = "adaptive"
 
-    touchpad {
-        natural_scroll = no
-    }
+        touchpad {
+     	   natural_scroll = no
+        }
 
-    sensitivity = 0
+	sensitivity = 0
 }
 
 general {
-    gaps_in = 3
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-    layout = dwindle
+	gaps_in = 3
+	gaps_out = 10
+	border_size = 2
+	col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+	col.inactive_border = rgba(595959aa)
+	layout = dwindle
 }
 
 decoration {
-    rounding = 8
-    multisample_edges = true
+	rounding = 8
+	multisample_edges = true
 
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+	active_opacity = 1.0
+	inactive_opacity = 1.0
 
-    blur = true
-    blur_size = 8
-    blur_passes = 2
-    blur_ignore_opacity = true
-    blur_new_optimizations = true
+	blur = true
+	blur_size = 8
+	blur_passes = 2
+	blur_ignore_opacity = true
+	blur_new_optimizations = true
 
-    drop_shadow = true
-    shadow_ignore_window = true
-    shadow_offset = 2 2
-    shadow_range = 4
-    shadow_render_power = 2
-    col.shadow = 0x66000000
+	drop_shadow = true
+	shadow_ignore_window = true
+	shadow_offset = 2 2
+	shadow_range = 4
+	shadow_render_power = 2
+	col.shadow = 0x66000000
 
-    blurls = gtk-layer-shell
-    blurls = waybar
-    blurls = lockscreen
+	blurls = gtk-layer-shell
+	blurls = waybar
+	blurls = lockscreen
 }
 
 animations {
-    enabled = yes
+	enabled = yes
 
-  bezier = overshot, 0.05, 0.9, 0.1, 1.05
-  bezier = smoothOut, 0.36, 0, 0.66, -0.56
-  bezier = smoothIn, 0.25, 1, 0.5, 1
+	bezier = overshot, 0.05, 0.9, 0.1, 1.05
+	bezier = smoothOut, 0.36, 0, 0.66, -0.56
+	bezier = smoothIn, 0.25, 1, 0.5, 1
 
-  animation = windows, 1, 5, overshot, slide
-  animation = windowsOut, 1, 4, smoothOut, slide
-  animation = windowsMove, 1, 4, default
-  animation = border, 1, 10, default
-  animation = fade, 1, 10, smoothIn
-  animation = fadeDim, 1, 10, smoothIn
-  animation = workspaces, 1, 6, default
+	animation = windows, 1, 5, overshot, slide
+	animation = windowsOut, 1, 4, smoothOut, slide
+	animation = windowsMove, 1, 4, default
+	animation = border, 1, 10, default
+	animation = fade, 1, 10, smoothIn
+	animation = fadeDim, 1, 10, smoothIn
+	animation = workspaces, 1, 6, default
 }
 
 dwindle {
-    no_gaps_when_only = false
-    pseudotile = yes 
-    preserve_split = yes
-    force_split = 2
+	no_gaps_when_only = false
+	pseudotile = yes 
+	preserve_split = yes
+	force_split = 2
 }
 
 master {
-    new_is_master = false 
-    new_on_top = false
-    no_gaps_when_only = false
-    always_center_master = true
-    mfact = 0.50
+	new_is_master = false 
+	new_on_top = false
+	no_gaps_when_only = false
+	always_center_master = true
+	mfact = 0.50
 }
 
 gestures {
-    workspace_swipe = on
-    workspace_swipe_forever = true
+	workspace_swipe = on
+	workspace_swipe_forever = true
 }
 
 device:epic mouse V1 {
-    sensitivity = -0.5
+       sensitivity = -0.5
 }
 
 misc {
-    enable_swallow = true
-    swallow_exception_regex = '^(mpv)$'
+	enable_swallow = true
+	swallow_exception_regex = '^(mpv)$'
 }
 
 windowrulev2 = workspace special silent, title:^(Firefox — Sharing Indicator)$
@@ -168,6 +169,7 @@ bind = $mainMod_CTRL, W, togglespecialworkspace, whats
 bind = $mainMod_CTRL, C, togglespecialworkspace, calc
 bind = $mainMod_CTRL, S, togglespecialworkspace, spot
 bind = $mainMod_CTRL, P, togglespecialworkspace, pomodoro
+bind = $mainMod_CTRL, A, togglespecialworkspace, anki
 
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod_SHIFT, M, fullscreen
